# litemint-soroban-contracts

./: README.md
crates/litemint-auction-contract/: Cargo.toml  README.md
crates/litemint-auction-contract/src/: lib.rs  test.rs  types.rs
crates/litemint-auction-contract/src/auctions/: behavior.rs  behavior_ascending_price.rs  behavior_descending_price.rs  mod.rs
crates/litemint-auction-contract/test_snapshots/test/: test_anti_sniping.1.json  test_auctions.1.json
crates/litemint-royalty-contract/: Cargo.toml  LICENSE  README.md
crates/litemint-royalty-contract/src/: lib.rs  test.rs  types.rs
crates/litemint-royalty-contract/src/agreement/: compensation_fixed.rs  compensation_percentage.rs  compensation_subscription.rs  impl.rs  mod.rs
