[package]
name = "litemint-auction-contract"
version = "0.1.6"
edition = "2021"
authors = ["litemint <hello@litemint.com>"]
keywords = ["soroban", "stellar", "web3", "smart-contract", "nft"]
license-file = "LICENSE"
repository = "https://github.com/litemint/litemint-soroban-contracts"
description = "Auction smart contract for the Litemint marketplace, implementing timed auctions with support for sealed bids, ascending and descending price mechanisms."

[package.metadata]
homepage = "https://litemint.com"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.3.1"

[dependencies.soroban-kit]
version = "0.1.10"
default-features = false
features = ["storage", "state-machine", "commitment-scheme"]

[dev_dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
