[package]
name = "litemint-royalty-contract"
version = "0.1.6"
edition = "2021"
authors = ["litemint <hello@litemint.com>"]
keywords = ["soroban", "stellar", "web3", "royalties", "nft"]
license-file = "LICENSE"
repository = "https://github.com/litemint/litemint-soroban-contracts"
description = "Royalty smart contract for the Litemint marketplace supporting fixed, subscription, and percentage-based royalties."

[package.metadata]
homepage = "https://litemint.com"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dependencies.soroban-kit]
version = "0.1.9"
default-features = false
features = ["storage", "oracle"]

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
